[tool.poetry]
name = "gas_estimation"
version = "0.1.0"
description = ""
authors = ["Raman Siamionau <raman.s@lido.fi>"]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
web3 = "^5.30.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
